# connect4

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  vcpkg.json
.github/workflows/: buildAll.yml  buildWindows.yml  buildWindowsAndroid.yml  tests.yml
android-project/: build.gradle  settings.gradle
android-project/app/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/frogzalcoatl/connect4/: Connect4Activity.Java
android/app/src/main/java/org/libsdl/app/: MyGameActivity.java  SDLActivity.java
include/Connect4/: connect4.h  constants.h
include/Connect4/android/: quit.h
include/Connect4/assets/: fonts.h  header.h  index.h  sounds.h
include/Connect4/discord/: index.h
include/Connect4/discord-rpc/: index.h
include/Connect4/game/: board.h  connect4.h  consoleOutput.h  events.h  utils.h
include/Connect4/game/input/: input.h
include/Connect4/game/screens/: game.h  index.h  menu.h  settings.h
include/Connect4/input/: cursorManager.h  gamepad.h  interaction.h
include/Connect4/instanceManager/: index.h  posix.h  windows.h
include/Connect4/physics/: intersection.h
include/Connect4/tools/: dynamicArray.h  packerTypes.h  stringHash.h  virtualFileSystem.h
include/Connect4/ui/: button.h  canvas.h  container.h  cursorManager.h  fontManager.h  interaction.h  memoryArena.h  node.h  popup.h  rectangle_element.h  screen.h  text_element.h  themes.h  types.h  utils.h  window.h
include/Connect4/ui/draw/: circle.h  ellipse.h  rectangle.h  shapes.h  text.h  triangle.h  utils.h
include/Connect4/ui/element/: button.h  notification.h
include/Connect4/ui/elements/: borders.h  button.h  buttonGroup.h  buttonStack.h  index.h  numberInput.h  popup.h  rectangle.h  symbol.h  text.h
include/Connect4/ui/screens/: game.h  index.h  interface.h  menu.h  screen.h  settings.h
resources/: com.frogzalcoatl.connect4.metainfo.xml  connect4.desktop  connect4.rc  icon.icns  windows-installer.iss
src/: connect4.c  main.c
src/android/: quit.c
src/assets/: fonts.c  sounds.c
src/discord/: index.c
src/discord-rpc/: index.c
src/game/: WINCHECKCRITIQUE.md  board.c  connect4.c  consoleOutput.c  events.c  random.c  utils.c
src/game/input/: input.c
src/game/screens/: game.c  index.c  menu.c  settings.c
src/input/: cursorManager.c  gamepad.c  interaction.c
src/instanceManager/: index.c  posix.c  windows.c
src/physics/: intersection.c
src/tools/: CMakeLists.txt  packer.c  stringHash.c  virtualFileSystem.c
src/ui/: arena.c  button.c  canvas.c  container.c  cursorManager.c  cursorStyle.c  fontManager.c  interaction.c  memoryArena.c  node.c  rectangle_element.c  screen.c  text_element.c  utils.c  window.c
src/ui/draw/: circle.c  ellipse.c  rectangle.c  shapes.c  text.c  triangle.c  utils.c
src/ui/element/: button.c  notification.c
src/ui/elements/: borders.c  button.c  buttonGroup.c  buttonStack.c  index.c  numberInput.c  popup.c  rectangle.c  symbol.c  text.c
src/ui/screens/: game.c  menu.c  screen.c  settings.c
